--- a/UI/Style_Sheets/light.css
+++ b/UI/Style_Sheets/light.css
@@ -1,80 +1,332 @@
 /*Global*/
+QCheckBox{
+    font-family: "Ubuntu";
+}
+QCheckBox[objectName^="checkBox_"]{
+    background-color: rgba(0,0,0,0);
+    color: @color4;
+}
+QCheckBox[objectName^="checkBox_"]:disabled{
+    color: #C0C0C0;
+}
+QCheckBox[objectName^="checkBox_"]::indicator:unchecked {
+    image: url(@icon_path/light-unchecked.png);
+}
+QCheckBox[objectName^="checkBox_"]::indicator:checked {
+    image: url(@icon_path/light-checked.png);
+}
+QCheckBox[objectName^="checkBox_"]::indicator:disabled:checked {
+    image: url(@icon_path/light-checked-disabled.png);
+}
+QCheckBox[objectName^="checkBox_"]::indicator:disabled:unchecked {
+    image: url(@icon_path/light-unchecked-disabled.png);    
+}
+QComboBox{
+    font-family: "Ubuntu";
+}
+QComboBox::drop-down {
+    border: none;
+}
+QComboBox::down-arrow {
+    image: url(@icon_path/light-down-arrow.png);
+    background-color: transparent;
+}
+QComboBox::down-arrow:disabled {
+    image: url(@icon_path/light-down-arrow-disabled.png);
+    background-color: transparent;
+}
+QDoubleSpinBox{
+    background-color: @color5;
+    color: @color4;
+    font-family: "Ubuntu";
+    border: 1px solid lightgray;
+}
+QDoubleSpinBox:disabled{
+    background-color: @color5;
+    color: #C0C0C0;
+    border: 1px solid lightgray;
+}
+QDoubleSpinBox::up-button {
+    subcontrol-origin: border;
+    subcontrol-position: top right;
+}
+QDoubleSpinBox::down-button {
+    subcontrol-origin: border;
+    subcontrol-position: bottom right;
+}
+QHeaderView{
+    font-family: "Ubuntu";
+}
+QLabel{
+    font-family: "Ubuntu";
+}
+QListWidget{
+    background-color: @color5;
+    color: @color4;
+    font-family: "Ubuntu";
+    border: 1px solid lightgray;
+}
+QListWidget:disabled{
+    background-color: @color5;
+    color: #C0C0C0;
+    border: 1px solid lightgray;
+}
+QMenu{
+    color:@color4;
+    background-color:@color2;
+    font-family: "Ubuntu";
+}
+QMenu::item{
+    background-color:transparent;
+}
+QMenu::item:selected{
+    color:@color5;
+    background-color:#308CC6;
+}
+QMenu:selected{
+    color:@color5;
+    background-color:#308CC6;
+}
+QPlainTextEdit{
+    border: 1px solid lightgray;
+    border-radius: 0px;
+    background-color: @color5;
+    color: @color4;
+    font-family: "Ubuntu";
+}
+QPlainTextEdit:disabled{
+    border: 1px solid lightgray;
+    border-radius: 0px;
+    background-color: #EFEFEF;
+    color: #C0C0C0;
+    font-family: "Ubuntu";
+}
+QProgressBar{
+    background-color: @color5;
+    color: @color4;
+    font-family: "Ubuntu";
+}
+/*QProgressBar::chunk{
+    border-radius: 3px;
+    background: QLinearGradient(X1:0, y1:0.966136, x2:0, y2:0, stop:0.609721 @color1, stop:0.691923 @color3);
+    background-color: @color1;
+    border: .px solid black;
+}*/
+QProgressBar:disabled{
+    background-color: @color5;
+    color: #C0C0C0;
+}
+QPushButton{
+    font-family: "Ubuntu";
+}
+QPushButton[objectName^="pushButton_"]{
+    border: 1px solid #ABABAB;
+    border-radius: 2px;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
+    color: black;
+    font-family: "Ubuntu";
+}
+QPushButton[objectName^="pushButton_"]:disabled{
+    border: 1px solid #C4C4C4;
+    border-radius: 2px;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
+    color: #C0C0C0;
+}
+QPushButton[objectName^="pushButton_"]:hover{
+    border: 1px solid #ABABAB;
+    border-radius: 2px;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #F8F8F8);
+    color: black;
+}
+/*
+QPushButton[objectName^="pushButton_"]:pressed{
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #666666, stop: 1 #666666);
+}*/
+QPushButton:default {
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #F8F9FA, stop: 1 #DFE6EB);
+    border: 1px solid #26709E;
+}
+QPushButton:focus:pressed {
+    background-color: #C9D1D7;
+    border: 1px solid #26709E;
+}
+QRadioButton{
+    font-family: "Ubuntu";
+    color: @color4;
+}
+QRadioButton:disabled{
+    color: #C0C0C0;
+}
+QRadioButton::indicator:unchecked {
+    image: url(@icon_path/light-radio.png);
+    padding-left: -1;
+}
+QRadioButton::indicator:checked {
+    image: url(@icon_path/light-radio-checked.png);
+    padding-left: -1;
+}
+QSpinBox{
+    background-color: @color5;
+    color: @color4;
+    font-family: "Ubuntu";
+    border: 1px solid lightgray;
+}
+QSpinBox:disabled{
+    background-color: @color5;
+    color: #C0C0C0;
+    border: 1px solid lightgray;
+}
+QSpinBox::up-button {
+    subcontrol-origin: border;
+    subcontrol-position: top right;
+}
+QSpinBox::down-button {
+    subcontrol-origin: border;
+    subcontrol-position: bottom right;
+}
+QStatusBar{
+    /*background-color: @color2;*/
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, x3: 0, y3: 1, stop: 0 @color1, stop: 0.1 @color2, stop: 1 @color1);
+    color: @color4;
+}
+QTableWidget{
+    background-color: @color5;
+    color: @color4;
+    border: 1px solid #B8B8B8;
+    font-family: "Ubuntu";
+}
+QTableWidget > QHeaderView{
+    background-color: @color2;
+    color: @color4;
+}
+QTableWidget > QHeaderView:disabled{
+    background-color: @color2;
+    color: #C0C0C0;
+}
+QTableWidget > QTableCornerButton{
+    background-color: @color2;
+    color: @color4;
+}
+QTableWidget:disabled{
+    background-color: #EFEFEF;
+    color: #C0C0C0;
+}
 #tabWidget > QTabBar::tab {
-	width: 132px; 
-	height:27px;
-	margin-top: 0px;
+    width: 132px; 
+    height:27px;
+    margin-top: 0px;
 }
 #tabWidget > QTabBar::tab:!selected {
     margin-top: 6px;
-	height: 21px;
-	width: 132px; 
+    height: 21px;
+    width: 132px; 
 }
 QTabBar::tab:disabled {
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #eeeeee, stop:0.12 #888888, stop:0.3 #666666,   stop:0.85 #444444, stop:1 #444444);
-	border: 1px solid #444444;
-	color: rgb(150, 150, 150);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #eeeeee, stop:0.12 #888888, stop:0.3 #666666,   stop:0.85 #444444, stop:1 #444444);
+    border: 1px solid #444444;
+    color: rgb(150, 150, 150);
 }
 QTabWidget::pane { 
-	border: 1px solid #17365D;
+    border: 1px solid #17365D;
 }
 QTabBar::tab {
-	qproperty-alignment: AlignCenter;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
-	border: 1px solid #17365D;
-	color:rgb(0, 220, 0);
+    qproperty-alignment: AlignCenter;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
+    border: 1px solid #17365D;
+    color:rgb(0, 220, 0);
     font: bold 10pt "Ubuntu";
-	margin-right:1px;
-	width: 132px;
-	height:22px;
-	margin-top: 3px;
+    margin-right:1px;
+    width: 132px;
+    height:22px;
+    margin-top: 3px;
 }
 QTabBar::tab:!selected {
     margin-top: 7px;
-	height: 18px;
-	color: rgb(255, 255, 255);
+    height: 18px;
+    color: rgb(255, 255, 255);
+}
+
+QTextEdit{
+    border: 1px solid lightgray;
+    border-radius: 0px;
+    background-color: @color5;
+    color: @color4;
+    font-family: "Ubuntu";
+}
+QTextEdit:disabled{
+    border: 1px solid lightgray;
+    border-radius: 0px;
+    background-color: #EFEFEF;
+    color: #C0C0C0;
+    font-family: "Ubuntu";
 }
 QTreeWidget{
+    background-color: @color5;
+    color: @color4;
     font-size: 10pt;
+    font-family: "Ubuntu";
+    border: 1px solid lightgray;
 }
+QTreeWidget > QHeaderView{
+    background-color: @color2;
+    color: @color4;
+}
+QTreeWidget::branch:open:has-children:!has-siblings,
+QTreeWidget::branch:open:has-children:has-siblings  {
+    border-image: none;
+    image: url(@icon_path/light-tree-open.png);
+}
+QTreeWidget::branch:has-children:!has-siblings:closed,
+QTreeWidget::branch:closed:has-children:has-siblings {
+    border-image: none;
+    image: url(@icon_path/light-tree-closed.png);
+}
+
+
 
 
 /*Specific*/
 QPushButton[objectName^="pushButton1_"]{
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
-	color: rgb(255, 255, 255);
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	width:107px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
+    color: rgb(255, 255, 255);
+    border: 1px solid #17365D;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    width:107px;
     margin-top: 6px;
-	height: 21px;
+    height: 21px;
 }
 QPushButton[objectName^="pushButton2_"]{
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
-	color:rgb(0, 220, 0);
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	height:27px;
-	margin-top: 3px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
+    color:rgb(0, 220, 0);
+    border: 1px solid #17365D;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    height:27px;
+    margin-top: 3px;
 }
 QPushButton[objectName^="pushButton_top"]{
-	color: rgb(0, 0, 0);
-	background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
-	border-style: outset;
-	border-width: 2px;
-	border-radius: 10px;
-	/*border-color: #152947;*/
-	border-color:  #17365D;
+    color: rgb(0, 0, 0);
+    background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
+    border-style: outset;
+    border-width: 2px;
+    border-radius: 10px;
+    /*border-color: #152947;*/
+    border-color:  #17365D;
 }
 QPushButton[objectName^="pushButton_top"]:hover{
-	background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(170, 170, 170,50));
+    color: @color4;
+    background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(170, 170, 170,50));
+    border-style: outset;
+    border-width: 2px;
+    border-radius: 10px;
+    border-color: @color3;
 }
 QPushButton[objectName^="pushButton_top"]:pressed{
-	background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
-	padding: 47px -2px 0px 92px;
+    background-color: qradialgradient(cx: 0.3, cy: -0.4, fx: 0.3, fy: -0.4, radius: 1.35, stop: 0 rgba(255, 255, 255,50), stop: 1 rgba(100, 100, 100,50));
+    padding: 47px -2px 0px 92px;
 }
 QPushButton#pushButton_top_tsi{padding: 45px 0px 0px 92px;}
 QPushButton#pushButton_top_pd{padding: 45px 0px 0px 94px;}
@@ -83,34 +335,34 @@ QPushButton#pushButton_top_iq{padding: 45px 0px 0px 94px;}
 QPushButton#pushButton_top_archive{padding: 45px 0px 0px 60px;}
 
 QFrame[objectName^="frame1_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QFrame[objectName^="frame2_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QFrame[objectName^="frame3_"]{border: 1px solid #17365D;}
 QFrame[objectName^="frame4_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
 }
 QFrame[objectName^="frame6_"]{
-	background-color: rgb(244, 244, 244);    
-	border: 1px solid #17365D;
+    background-color: rgb(244, 244, 244);    
+    border: 1px solid #17365D;
 }
 
 
 QTextEdit[objectName^="textEdit1_"]{border: 1px solid #17365D;}
 QTextEdit[objectName^="textEdit2_"]{
-	border: 1px solid #17365D;
-	font: 10pt "Ubuntu";
+    border: 1px solid #17365D;
+    font-size: 10pt;
 }
 
 
@@ -120,56 +372,57 @@ QTableWidget[objectName^="tableWidget1_"]{border: 1px solid #17365D;}
 #treeWidget_attack_attacks > QHeaderView {font-size: 10pt;}
 
 QLabel[objectName^="label1_"]{
-	qproperty-alignment: AlignCenter;
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
-	padding: 0px 0px;
-	color: rgb(255, 255, 255);
-	max-height: 20px;
-	font: bold 10pt "Ubuntu";
+    qproperty-alignment: AlignCenter;
+    border: 1px solid #17365D;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
+    padding: 0px 0px;
+    color: rgb(255, 255, 255);
+    max-height: 20px;
+    font-size: 10pt;
+    font-weight: bold;
 }
 QLabel#label4_status1{
     max-height:13px; 
     max-width:90px;
-    font: 10pt "Ubuntu";
+    font-size: 10pt;
 }
 QPushButton#pushButton_status2{
     max-height:13px; 
     max-width:90px;
-    font: 10pt "Ubuntu";
+    font-size: 10pt;
     border: none;
 }
 QPushButton#pushButton_status3{
     max-height:13px; 
     max-width:50px;
-    font: 10pt "Ubuntu";
+    font-size: 10pt;
     border: none;
 }
 QPushButton#pushButton_status4{
     max-height:13px; 
     max-width:50px;
-    font: 10pt "Ubuntu";
+    font-size: 10pt;
     border: none;
 }
 QPushButton#pushButton_status5{
     max-height:13px; 
     max-width:55px;
-    font: 10pt "Ubuntu";
+    font-size: 10pt;
     border: none;
 }
 
 QStackedWidget[objectName^="stackedWidget1_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-radius: 15px;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
+    border-radius: 15px;
 }
 QStackedWidget[objectName^="stackedWidget2_"]{
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+    background-color: rgb(251, 251, 251);
+    border: 1px solid #17365D;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 QStackedWidget[objectName^="stackedWidget3_"]{border: 1px solid #17365D;}
 
@@ -179,12 +432,12 @@ QStackedWidget[objectName^="stackedWidget3_"]{border: 1px solid #17365D;}
 
 
 QWidget#centralwidget{
-	background-color: rgb(244, 244, 244);
+    background-color: rgb(244, 244, 244);
 }
 
 
 QWidget#scrollAreaWidgetContents_2 {
-	background-color: rgb(244, 244, 244);
+    background-color: rgb(244, 244, 244);
 }
 
 QMenuBar#menubar {
@@ -199,18 +452,18 @@ QMenuBar#menubar::item:selected {
 
 QComboBox[objectName^="comboBox2_"]{
     padding-left: 4px;
-    font: 10pt "Ubuntu";
+    font-size: 10pt;
 }
 QComboBox[objectName^="comboBox2_"]:disabled{
     padding-left: 4px;
-    font: 10pt "Ubuntu";
+    font-size: 10pt;
 }
 
 QTableWidget#tableWidget_status_headers{
-	background-color: rgb(244, 244, 244);
+    background-color: rgb(244, 244, 244);
 }
 QTableWidget#tableWidget_status_results{
-	background-color: rgb(244, 244, 244);
+    background-color: rgb(244, 244, 244);
 }
 
 QFrame#line_iq{border: 1px solid #17365D;}
